# DarkSoulsCpp

./: .gitignore  Atividade_Heranca.h  Attack.sav  Attacks.atk  CMakeLists.txt  Diagram.plantuml  Diagram.puml  Enemies.enm  Enemy.sav  Hero.sav  Makefile  NewDiagram.plantuml  README.md  ThiagoParacampo_AtividadeHeranca.h  ThiagoParacampo_AtividadePolimorfismo.h  Weapons.wpn  enemy.cpp  enemy.h  main.cpp  player.cpp  player.h  save.sav  wannabe_Save.sav  weapon.cpp  weapon.h
src/: Armor.cpp  ArmorParser.cpp  Attack.cpp  Attack.h  AttackParser.cpp  Battle.cpp  Battle.h  BodyPartsParser.cpp  BossBattle.cpp  Consumable.cpp  ConsumableParser.cpp  Data.cpp  Enemy.cpp  Enemy.h  EnemyParser.cpp  Entity.cpp  Entity.h  EntityDetails.h  EntityParser.cpp  Game.cpp  Game.h  GameObject.cpp  HeroNew.sav  Interactable.cpp  InventoryParser.cpp  Item.cpp  Item.h  LongRangeWeapon.cpp  Makefile  MeleeWeapon.cpp  NPC.cpp  NormalBattle.cpp  OffensiveConsumable.cpp  Player.cpp  Player.h  PlayerParser.cpp  RestorativeConsumable.cpp  Weapon.cpp  Weapon.h  WeaponParser.cpp  (+6 more)
src/Attacks/: AtaqueLargo.sav  Estocada.sav  GiroAtomico.sav  QuedaDaLua.sav
src/Weapons/: EspadaBranca.sav  EspetaCoracao.sav  LancaDaLua.sav  LuzArdente.sav
src/headers/: Armor.h  ArmorParser.h  Attack.h  AttackParser.h  Battle.h  BodyPartsParser.h  BossBattle.h  Consumable.h  ConsumableParser.h  Data.h  Enemy.h  EnemyParser.h  Entity.h  EntityDetails.h  EntityParser.h  EssentialStructs.h  GameObject.h  Interactable.h  InventoryParser.h  Item.h  LongRangeWeapon.h  MeleeWeapon.h  NPC.h  NormalBattle.h  Player.h  Weapon.h  (+4 more)
